	* Breaking API so that we now hide internal data structures.

2008-02-06 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Rewrote Peter Hartley's patch to include a new extra header field in
	FileInfo.

*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-09-18 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Customize the stack size of the threads used by pupnp through the new THREAD_STACK_SIZE variable

	This patch allows a user to customize the stack size of the threads used by
	pupnp through the new THREAD_STACK_SIZE variable. This is especially useful
	on embedded systems with limited memory where the user can set THREAD_STACK_SIZE
	to ITHREAD_STACK_MIN.

	However, as this modification can have side effects, I set 0 as the default
	value, so threads will continue to use the default stack size of the system
	(which varies greatly as stated in
	https://computing.llnl.gov/tutorials/pthreads/).

2010-09-16 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Broken IPv6.
	IPv6 is currently broken in latest release of branch-1.6.x, so find a
	patch attached that correct the issue (small fixes on define, undef and
	retVal).

2010-09-10 Warwick Harvey <warwick.harvey(at)tieto.com>
	Patch to take notice of UPNP_USE_RWLOCK flag

	The configure.ac file included with UPnP checks for the presence of the
	pthread_rwlock_t type, and then sets the value of the UPNP_USE_RWLOCK
	flag appropriately.  However, this flag is not referenced at all in the
	source code, and thus the code does not compile on systems that don't
	have the pthread_rwlock_t type (such as Android).
	
	Please find attached a patch (against the current 1.6.x head) that checks
	the value of this flag and falls back on using mutexes if read-write
	locks are not available.

2010-09-10 Jean Sigwald <jean.sigwald(at)orange-ftgroup.com>